--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
+# api key
+/src/apiKey.js
+/src/helper/apiKey.js
 
 # dependencies
 /node_modules
