Add tests for userReducer

--- a/package.json
+++ b/package.json
@@ -21,5 +21,15 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.1.0"
-  }
+  },
+    "jest": {
+      "collectCoverageFrom": [
+        "src/**/*.{js,jsx}",
+        "!src/index.js",
+        "!src/setupTests.js",
+        "!src/helper/apiKey.js",
+        "!src/registerServiceWorker.js",
+        "!src/reducers/index.js"
+      ]
+    }
 }
